fixed bugs on registration page and tested

--- a/login.html
+++ b/login.html
@@ -8,9 +8,7 @@
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700,300" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css">
-<!-- Add the slick-theme.css if you want default styling -->
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css">
+
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="styles/vendor.css">
@@ -85,7 +83,7 @@
         <div class="container">
           <h3 class="text-center">WELCOME TO SELFCAD COMMUNITY FORUMS</h3>
           <br>
-          <h4 class="text-center">If you are new here, be sure to check our <a href="#">Community Rules</a>. You may need to <a href="#">register</a> before 
+          <h4 class="text-center">If you are new here, be sure to check our <a href="#">Community Rules</a>. You may need to <a href="registration.html">register</a> before 
           you can post anything.</h4>
           <form class="form-inline">
             <div class="form-group">
@@ -239,7 +237,6 @@
 
     <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=true"></script>
 
-    <!--<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>-->
     <script src="scripts/vendor.js"></script>
     
     <script src="scripts/plugins.js"></script>
