fixed radio buttons

--- a/registration.html
+++ b/registration.html
@@ -245,9 +245,9 @@
                     <div class="fieldgroup">         
                       <label class="display-block" for="sex">Sex </label>
                       <div class="radio">
-                        <input id="male" type="radio" name="gender" value="male"> 
+                        <input id="male" type="radio" name="sex" value="male"> 
                         <label for="male">Male</label>
-                        <input id="female" type="radio" name="gender" value="female">
+                        <input id="female" type="radio" name="sex" value="female">
                         <label for="female">Female</label>
                       </div>
                     </div>
@@ -267,9 +267,9 @@
                     <div class="fieldgroup">         
                       <label class="display-block" for="3Dprinter">Do you have 3D Printer? </label>
                       <div class="radio">
-                        <input id="yes" type="radio" name="gender" value="yes"> 
+                        <input id="yes" type="radio" name="3d printer" value="yes"> 
                         <label for="yes">Yes</label>
-                        <input id="no" type="radio" name="gender" value="no">
+                        <input id="no" type="radio" name="3d printer" value="no">
                         <label for="no">No</label>
                       </div>
                     </div>
