created confirm registration page

--- a/registration.html
+++ b/registration.html
@@ -55,13 +55,13 @@
                 
                 <!-- FOR NOT REGISTERED USERS -->
                 
-                <!-- <li class="selfcad">
+                <li class="selfcad">
                   <a href="login.html" class="dropdown-toggle"><span class="login-icon"></span>Login</a>
-                </li> -->
+                </li>
 
                 <!-- FOR NOT REGISTERED USERS -->
 
-                <li class="dropdown">
+                <!-- <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <span class="user-photo"></span>Natalia
                   </a>
@@ -69,7 +69,7 @@
                     <li><a href="#"><span class="profile-icon"></span>My Profile</a></li>
                     <li><a href="#"><span class="logout-icon"></span>LogOut</a></li>
                   </ul>
-                </li>
+                </li> -->
 
                 <!-- END FOR REGISTERED USERS -->
 
