created home mobile version, fixed bugs on home page

--- a/confirm-registration.html
+++ b/confirm-registration.html
@@ -196,7 +196,7 @@
               <span>June 4 , 2014</span>
             </div>
           </div>
-          <p class="copyright"> &copy; 2015 selfcad.com  |  All rights reserved </p>
+          <p class="copyright text-right"> &copy; 2015 selfcad.com  |  All rights reserved </p>
         </div>
       </div>
     </div>
