--- a/login.html
+++ b/login.html
@@ -82,8 +82,8 @@
       <section class="main-title-block">
         <div class="container">
           <h3 class="text-center">WELCOME TO SELFCAD COMMUNITY FORUMS</h3>
-          <br>
-          <h4 class="text-center">If you are new here, be sure to check our <a href="#">Community Rules</a>. You may need to <a href="registration.html">register</a> before 
+          <br class="rwd-break-none-mobile">
+          <h4 class="text-center">If you are new here, be sure to check our <a href="#">Community Rules</a>.<br class="rwd-break"> You may need to <a href="registration.html">register</a> before<br class="rwd-break"> 
           you can post anything.</h4>
           <form class="form-inline">
             <div class="form-group">
@@ -100,26 +100,29 @@
             <div class="row">
               <div class="col-md-4 col-sm-4">
                 <a href="#" class="text-center">
-                  <img class="icons" src="images/icon-gallery.png">
-                  Gallery
-                  <br>
-                  <span>1562 photo / 15 categories</span>  
+                  <div class="content-menu-item-wrap gallery-item">
+                    Gallery
+                    <br>
+                    <span>1562 photo / 15 categories</span>  
+                  </div>
                 </a>
               </div>
               <div class="col-md-4 col-sm-4">
                 <a href="#" class="text-center">
-                  <img class="icons" src="images/icon-forum.png">
-                  Forums
-                  <br>
-                  <span>1000 topics / 15 categories</span>
+                  <div class="content-menu-item-wrap forum-item">
+                    Forums
+                    <br>
+                    <span>1000 topics / 15 categories</span>
+                  </div>
                 </a>
               </div>
               <div class="col-md-4 col-sm-4">
-                <a href="#" class="text-center faq-icon">
-                  <img class="icons" src="images/icon-faq.png">
-                  FAQ
-                  <br>
-                  <span>200 questions / 5 categories</span>
+                <a href="#" class="text-center">
+                  <div class="content-menu-item-wrap faq-item">
+                    FAQ
+                    <br>
+                    <span>200 questions / 5 categories</span>
+                  </div>
                 </a>
               </div>
             </div>
@@ -174,7 +177,7 @@
         </div><!-- content-list -->
       </section>
 
-      <div class="footer">
+      <div class="footer hidden-xs">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
