--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
       <section class="main-title-block">
         <div class="container">
           <h3 class="text-center">WELCOME TO SELFCAD COMMUNITY FORUMS</h3>
-          <br>
-          <h4 class="text-center">If you are new here, be sure to check our <a href="#">Community Rules</a>. You may need to <a href="registration.html">register</a> before 
+          <br class="rwd-break-none-mobile">
+          <h4 class="text-center">If you are new here, be sure to check our <a href="#">Community Rules</a>.<br class="rwd-break"> You may need to <a href="registration.html">register</a> before<br class="rwd-break"> 
           you can post anything.</h4>
+          
           <form class="form-inline">
             <div class="form-group">
               <img src="images/search-icon-big.png">
@@ -87,6 +88,7 @@
             </div>
             <button type="submit" class="btn btn-default">Search</button>
           </form>
+
         </div>
       </section><!-- main-title-block -->
       <section>
@@ -95,26 +97,29 @@
             <div class="row">
               <div class="col-md-4 col-sm-4">
                 <a href="#" class="text-center">
-                  <img class="icons" src="images/icon-gallery.png">
-                  Gallery
-                  <br>
-                  <span>1562 photo / 15 categories</span>  
+                  <div class="content-menu-item-wrap gallery-item">
+                    Gallery
+                    <br>
+                    <span>1562 photo / 15 categories</span>  
+                  </div>
                 </a>
               </div>
               <div class="col-md-4 col-sm-4">
                 <a href="#" class="text-center">
-                  <img class="icons" src="images/icon-forum.png">
-                  Forums
-                  <br>
-                  <span>1000 topics / 15 categories</span>
+                  <div class="content-menu-item-wrap forum-item">
+                    Forums
+                    <br>
+                    <span>1000 topics / 15 categories</span>
+                  </div>
                 </a>
               </div>
               <div class="col-md-4 col-sm-4">
-                <a href="#" class="text-center faq-icon">
-                  <img class="icons" src="images/icon-faq.png">
-                  FAQ
-                  <br>
-                  <span>200 questions / 5 categories</span>
+                <a href="#" class="text-center">
+                  <div class="content-menu-item-wrap faq-item">
+                    FAQ
+                    <br>
+                    <span>200 questions / 5 categories</span>
+                  </div>
                 </a>
               </div>
             </div>
@@ -122,7 +127,7 @@
         </div>
       </section>
       <section>
-        <div class="content-list">
+        <div class="content-list hidden-xs">
           <div class="container">
 
             <!-- FOR REGISTERED USERS -->
@@ -317,7 +322,162 @@
         </div><!-- content-list -->
       </section>
 
-      <div class="footer">
+      <!-- CONTENT LIST MOBILE -->
+      <section>
+        <div class="content-list-mobile visible-xs-block">
+          <div class="container">
+            <h4>Popular forum topics</h4>
+            <div id="carousel-1" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <!-- <ol class="carousel-indicators">
+                <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-1" data-slide-to="1"></li>
+                <li data-target="#carousel-1" data-slide-to="2"></li>
+                <li data-target="#carousel-1" data-slide-to="3"></li>
+                <li data-target="#carousel-1" data-slide-to="4"></li>
+              </ol> -->
+
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                  <div class="carousel-caption">
+                    <h5>What is the Meta Post</h5>
+                    <p>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem</p>
+                    <span>June 4 , 2014</span>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="carousel-caption">
+                    <h5>What is the Meta Post</h5>
+                    <p>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem</p>
+                    <span>June 4 , 2014</span>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="carousel-caption">
+                    <h5>What is the Meta Post</h5>
+                    <p>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem</p>
+                    <span>June 4 , 2014</span>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="carousel-caption">
+                    <h5>What is the Meta Post</h5>
+                    <p>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem</p>
+                    <span>June 4 , 2014</span>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="carousel-caption">
+                    <h5>What is the Meta Post</h5>
+                    <p>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem</p>
+                    <span>June 4 , 2014</span>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel-1" role="button" data-slide="prev">
+                <span class="carousel-left-arrow"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel-1" role="button" data-slide="next">
+                <span class="carousel-right-arrow"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div><!-- carousel -->
+            <div class="divider"></div>
+            <div class="users-raiting-mobile soft-ends-20">
+              <h4>Top Users Raitings</h4>
+              <div class="row">
+                <div class="col-xs-4">
+                  <a href="#" class="user-name">Natalia</a>
+                  <img src="images/user-photo-circle.png" alt="" class="img-circle img-responsive">
+                  <p><span class="total-count">50</span>Posts</p>
+                  <p><span class="total-count">150</span>Likes</p>
+                </div>
+                <div class="col-xs-4">
+                  <a href="#" class="user-name">Natalia</a>
+                  <img src="images/user-photo-circle.png" alt="" class="img-circle img-responsive">
+                  <p><span class="total-count">50</span>Posts</p>
+                  <p><span class="total-count">150</span>Likes</p>
+                </div>
+                <div class="col-xs-4">
+                  <a href="#" class="user-name">Natalia</a>
+                  <img src="images/user-photo-circle.png" alt="" class="img-circle img-responsive">
+                  <p><span class="total-count">50</span>Posts</p>
+                  <p><span class="total-count">150</span>Likes</p>
+                </div>
+              </div>
+            </div><!-- users-raiting-mobile -->
+            <div class="divider"></div>
+            <h4>Latest updates</h4>
+            <div id="carousel-2" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <!-- <ol class="carousel-indicators">
+                <li data-target="#carousel-2" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-2" data-slide-to="1"></li>
+                <li data-target="#carousel-2" data-slide-to="2"></li>
+                <li data-target="#carousel-2" data-slide-to="3"></li>
+                <li data-target="#carousel-2" data-slide-to="4"></li>
+              </ol> -->
+
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                  <div class="carousel-caption">
+                    <h5>Natalia</h5>
+                    <p>How do you say Envato in Chinese? Here's how we worked it out. enva.to/4TfPo pic.twitter.com/jzIY9XyS04</p>
+                    <span>11.24 PM</span>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="carousel-caption">
+                    <h5>What is the Meta Post</h5>
+                    <p>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem</p>
+                    <span>June 4 , 2014</span>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="carousel-caption">
+                    <h5>What is the Meta Post</h5>
+                    <p>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem</p>
+                    <span>June 4 , 2014</span>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="carousel-caption">
+                    <h5>What is the Meta Post</h5>
+                    <p>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem</p>
+                    <span>June 4 , 2014</span>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="carousel-caption">
+                    <h5>What is the Meta Post</h5>
+                    <p>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem</p>
+                    <span>June 4 , 2014</span>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel-2" role="button" data-slide="prev">
+                <span class="carousel-left-arrow"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel-2" role="button" data-slide="next">
+                <span class="carousel-right-arrow"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div><!-- carousel -->
+            <div class="divider"></div>
+          </div> <!-- container -->
+        </div><!-- content-list-mobile -->
+      </section>
+      <!-- END CONTENT LIST MOBILE -->
+
+      <div class="footer soft-ends-20 hidden-xs">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -363,9 +523,14 @@
               <span>June 4 , 2014</span>
             </div>
           </div>
-          <p class="copyright"> &copy; 2015 selfcad.com  |  All rights reserved </p>
+          <p class="copyright text-right push-ends-40"> &copy; 2015 selfcad.com  |  All rights reserved </p>
         </div>
       </div>
+      <!-- MOBILE FOOTER -->
+      <div class="footer-mobile soft-ends-30 hidden-lg">
+          <p class="copyright text-center push-reset"> &copy; 2015 selfcad.com  |  All rights reserved </p>
+      </div>
+      <!-- END MOBILE FOOTER -->
     </div>
     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
