--- a/all-topics.html
+++ b/all-topics.html
@@ -308,7 +308,7 @@
         </div>
       </section>
 
-      <div class="footer">
+      <div class="footer soft-ends-20 hidden-xs">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -354,9 +354,14 @@
               <span>June 4 , 2014</span>
             </div>
           </div>
-          <p class="copyright text-right"> &copy; 2015 selfcad.com  |  All rights reserved </p>
+          <p class="copyright text-right push-ends-40"> &copy; 2015 selfcad.com  |  All rights reserved </p>
         </div>
       </div>
+      <!-- MOBILE FOOTER -->
+      <div class="footer-mobile soft-ends-30 hidden-lg">
+          <p class="copyright text-center push-reset"> &copy; 2015 selfcad.com  |  All rights reserved </p>
+      </div>
+      <!-- END MOBILE FOOTER -->
     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
