--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li class="dropdown">
                   <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="home-icon"></span>Home</a>
@@ -132,13 +132,13 @@
 
             <!-- FOR REGISTERED USERS -->
 
-            <div class="main-menu">
+            <!-- <div class="main-menu">
               <a class="btn btn-default" href="#" role="button">My topics</a>
               <a class="btn btn-default" href="#" role="button">Featured</a>
               <a class="btn btn-default star-icon" href="#" role="button">Favorites</a>
               <a class="btn btn-default" href="#" role="button">Following</a>
               <a class="btn btn-default" href="#" role="button">Gallery</a>
-            </div>
+            </div> -->
 
             <!-- END FOR REGISTERED USERS -->
 
