--- a/confirm-registration.html
+++ b/confirm-registration.html
@@ -100,26 +100,29 @@
             <div class="row">
               <div class="col-md-4 col-sm-4">
                 <a href="#" class="text-center">
-                  <img class="icons" src="images/icon-gallery.png">
-                  Gallery
-                  <br>
-                  <span>1562 photo / 15 categories</span>  
+                  <div class="content-menu-item-wrap gallery-item">
+                    Gallery
+                    <br>
+                    <span>1562 photo / 15 categories</span>  
+                  </div>
                 </a>
               </div>
               <div class="col-md-4 col-sm-4">
                 <a href="#" class="text-center">
-                  <img class="icons" src="images/icon-forum.png">
-                  Forums
-                  <br>
-                  <span>1000 topics / 15 categories</span>
+                  <div class="content-menu-item-wrap forum-item">
+                    Forums
+                    <br>
+                    <span>1000 topics / 15 categories</span>
+                  </div>
                 </a>
               </div>
               <div class="col-md-4 col-sm-4">
-                <a href="#" class="text-center faq-icon">
-                  <img class="icons" src="images/icon-faq.png">
-                  FAQ
-                  <br>
-                  <span>200 questions / 5 categories</span>
+                <a href="#" class="text-center">
+                  <div class="content-menu-item-wrap faq-item">
+                    FAQ
+                    <br>
+                    <span>200 questions / 5 categories</span>
+                  </div>
                 </a>
               </div>
             </div>
