added all-users and all-topics pages, fixed navbar

--- a/confirm-registration.html
+++ b/confirm-registration.html
@@ -46,7 +46,7 @@
                   <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="home-icon"></span>Home</a>
                   <ul class="dropdown-menu">
                     <li><a href="all-topics.html"><span class="all-topics-icon"></span>All Topics</a></li>
-                    <li><a href="#"><span class="all-users-icon"></span>All Users</a></li>
+                    <li><a href="all-users.html"><span class="all-users-icon"></span>All Users</a></li>
                   </ul>
                 </li>
                 <li class="selfcad">
