--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="home-icon"></span>Home</a>
                   <ul class="dropdown-menu">
                     <li><a href="all-topics.html"><span class="all-topics-icon"></span>All Topics</a></li>
-                    <li><a href="#"><span class="all-users-icon"></span>All Users</a></li>
+                    <li><a href="all-users.html"><span class="all-users-icon"></span>All Users</a></li>
                   </ul>
                 </li>
                 <li class="selfcad">
@@ -57,7 +57,7 @@
                   <a href="login.html" class="dropdown-toggle"><span class="login-icon"></span>Login</a>
                 </li>
                 <!-- FOR NOT REGISTERED USERS -->
-                
+
                 <!-- FOR REGISTERED USERS -->
 
                 <!-- <li class="dropdown">
@@ -93,13 +93,13 @@
                 </li>
                 <!-- FOR REGISTERED USERS -->
 
-                <li>
+                <!-- <li>
                   <a href="#">
                     <span class="user-photo"></span>Natalia
                   </a>
                 </li>
                 <li><a href="#"><span class="profile-icon"></span>My Profile</a></li>
-                <li><a href="#"><span class="logout-icon"></span>LogOut</a></li>
+                <li><a href="#"><span class="logout-icon"></span>LogOut</a></li> -->
 
                 <!-- END FOR REGISTERED USERS -->
               </ul>
