--- a/all-topics.html
+++ b/all-topics.html
@@ -46,7 +46,7 @@
                   <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="home-icon"></span>Home</a>
                   <ul class="dropdown-menu">
                     <li><a href="all-topics.html"><span class="all-topics-icon"></span>All Topics</a></li>
-                    <li><a href="#"><span class="all-users-icon"></span>All Users</a></li>
+                    <li><a href="all-users.html"><span class="all-users-icon"></span>All Users</a></li>
                   </ul>
                 </li>
                 <li class="selfcad">
@@ -657,235 +657,3 @@
     <script src="scripts/main.js"></script>
   </body>
 </html>
-      
-      <!-- <section class="gallery-block">
-        <div class="container">
-          <h1>WELCOME TO SELFCAD COMMUNITY FORUMS</h1>
-          <p>If you are new here, be sure to check our <a href="#">Community Rules</a>. You may need to register before 
-          you can post anything.</p>
-
-          <section class="center slider responsive">
-            <div>
-              <img src="images/gallery-img-1.jpg">
-            </div>
-            <div>
-              <img src="images/gallery-img-2.jpg">
-            </div>
-            <div>
-              <img src="images/gallery-img-3.jpg">
-            </div>
-            <div>
-              <img src="images/gallery-img-4.jpg">
-            </div>
-            <div>
-              <img src="images/gallery-img-5.jpg">
-            </div>
-            <div>
-              <img src="images/gallery-img-6.jpg">
-            </div>
-            <div>
-              <img src="images/gallery-img-1.jpg">
-            </div>
-            <div>
-              <img src="images/gallery-img-2.jpg">
-            </div>
-            <div>
-              <img src="images/gallery-img-3.jpg">
-            </div>
-            <div>
-              <img src="images/gallery-img-4.jpg">
-            </div>
-            <div>
-              <img src="images/gallery-img-5.jpg">
-            </div>
-            <div>
-              <img src="images/gallery-img-6.jpg">
-            </div>
-          </section>
-          <div class="main-menu pull-right">
-            <a class="btn btn-default" href="#" role="button">My topics</a>
-            <a class="btn btn-default" href="#" role="button">Featured</a>
-            <a class="btn btn-default star-icon" href="#" role="button">Favorites</a>
-            <a class="btn btn-default" href="#" role="button">Following</a>
-            <a class="btn btn-default" href="#" role="button">Gallery</a>
-          </div>
-          <div class="forum-topics">
-            <p><span class="home-icon"></span>Forum<span class="arrow-icon"></span>All topics</p>
-          </div>
-          <div class="row">
-            <div class="col-md-8">
-              <div class="sort-by">
-                <p>Sort by</p>
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Newest <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                  <li><a href="#">1</a></li>
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li><a href="#">next action</a></li>
-                </ul>
-                <a class="btn btn-default add-topic pull-right" href="#" role="button">New topic</a>
-              </div>
-              <div class="table-responsive">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>Topic</th>
-                      <th>Category</th> 
-                      <th>Posts</th> 
-                      <th>Views</th> 
-                      <th>Last post by</th> 
-                    </tr> 
-                  </thead>
-                  <tbody> 
-                    <tr> 
-                      <th scope="row">
-                        <a class="btn" href="#" role="button"><img src="images/not-choosed-star.png"></a>
-                        <p class="title">Hello, bla-bla-bla....<br><span>by <a href="#">Soni</a>, today at 1.56 pm</span></p>
-                      </th> 
-                      <td class="category">Main Forum</td> 
-                      <td class="posts-views">170</td> 
-                      <td class="posts-views">2k</td> 
-                      <td><span class="name">arthur</span><br><span class="date">11.26.15</span></td> 
-                    </tr> 
-                    <tr> 
-                      <th scope="row">
-                        <a class="btn" href="#" role="button"><img src="images/choosed-star.png"></a>
-                        <p class="title">Hello, bla-bla-bla....<br><span>by <a href="#">Soni</a>, today at 1.56 pm</span></p>
-                      </th> 
-                      <td class="category">Technical Problems</td> 
-                      <td class="posts-views">170</td> 
-                      <td class="posts-views">2k</td> 
-                      <td><span class="name">arthur</span><br><span class="date">11.26.15</span></td> 
-                    </tr> 
-                    <tr> 
-                      <th scope="row">
-                        <a class="btn" href="#" role="button"><img src="images/not-choosed-star.png"></a>
-                        <p class="title">Hello, bla-bla-bla....<br><span>by <a href="#">Soni</a>, today at 1.56 pm</span></p>
-                      </th> 
-                      <td class="category">Off-topic</td> 
-                      <td class="posts-views">170</td> 
-                      <td class="posts-views">2k</td> 
-                      <td><span class="name">arthur</span><br><span class="date">11.26.15</span></td> 
-                    </tr> 
-                    <tr> 
-                      <th scope="row">
-                        <a class="btn" href="#" role="button"><img src="images/choosed-star.png"></a>
-                        <p class="title">Hello, bla-bla-bla....<br><span>by <a href="#">Soni</a>, today at 1.56 pm</span></p>
-                      </th> 
-                      <td class="category">3D Printing</td> 
-                      <td class="posts-views">170</td> 
-                      <td class="posts-views">2k</td> 
-                      <td><span class="name">arthur</span><br><span class="date">11.26.15</span></td> 
-                    </tr> 
-                    <tr> 
-                      <th scope="row">
-                        <a class="btn" href="#" role="button"><img src="images/not-choosed-star.png"></a>
-                        <p class="title">Hello, bla-bla-bla....<br><span>by <a href="#">Soni</a>, today at 1.56 pm</span></p>
-                      </th> 
-                      <td class="category">Challenges</td> 
-                      <td class="posts-views">170</td> 
-                      <td class="posts-views">2k</td> 
-                      <td><span class="name">arthur</span><br><span class="date">11.26.15</span></td> 
-                    </tr> 
-                    <tr> 
-                      <th scope="row">
-                        <a class="btn" href="#" role="button"><img src="images/choosed-star.png"></a>
-                        <p class="title">Hello, bla-bla-bla....<br><span>by <a href="#">Soni</a>, today at 1.56 pm</span></p>
-                      </th> 
-                      <td class="category">Main Forum</td> 
-                      <td class="posts-views">170</td> 
-                      <td class="posts-views">2k</td> 
-                      <td><span class="name">arthur</span><br><span class="date">11.26.15</span></td> 
-                    </tr>
-                    <tr> 
-                      <th scope="row">
-                        <a class="btn" href="#" role="button"><img src="images/not-choosed-star.png"></a>
-                        <p class="title">Hello, bla-bla-bla....<br><span>by <a href="#">Soni</a>, today at 1.56 pm</span></p>
-                      </th> 
-                      <td class="category">Payments</td> 
-                      <td class="posts-views">170</td> 
-                      <td class="posts-views">2k</td> 
-                      <td><span class="name">arthur</span><br><span class="date">11.26.15</span></td> 
-                    </tr> 
-                    <tr> 
-                      <th scope="row">
-                        <a class="btn" href="#" role="button"><img src="images/not-choosed-star.png"></a>
-                        <p class="title">Hello, bla-bla-bla....<br><span>by <a href="#">Soni</a>, today at 1.56 pm</span></p>
-                      </th> 
-                      <td class="category">Payments</td> 
-                      <td class="posts-views">170</td> 
-                      <td class="posts-views">2k</td> 
-                      <td><span class="name">arthur</span><br><span class="date">11.26.15</span></td> 
-                    </tr> 
-                    <tr> 
-                      <th scope="row">
-                        <a class="btn" href="#" role="button"><img src="images/not-choosed-star.png"></a>
-                        <p class="title">Hello, bla-bla-bla....<br><span>by <a href="#">Soni</a>, today at 1.56 pm</span></p>
-                      </th> 
-                      <td class="category">Payments</td> 
-                      <td class="posts-views">170</td> 
-                      <td class="posts-views">2k</td> 
-                      <td><span class="name">arthur</span><br><span class="date">11.26.15</span></td> 
-                    </tr> 
-                  </tbody>
-                </table>
-              </div>
-            </div>
-            <div class="col-md-3 col-md-offset-1 col-sm-12">
-              <div class="pop-topics center-block">
-                <h4 class="text-center">Popular topics</h4>
-                <div class="list-group">
-                  <img class ="bubbles" src="images/bubble-star.png">
-                  <a href="#" class="list-group-item">
-                    Drawing tool is not working in 
-                    advanced Drawing tool is not 
-                    working in advanced...
-                  </a>
-                  <img class ="bubbles" src="images/bubble-star.png">
-                  <a href="#" class="list-group-item">Drawing tool is not working in advanced Drawing tool is not working in advanced...</a>
-                  <img class ="bubbles" src="images/bubble-star.png">
-                  <a href="#" class="list-group-item">Drawing tool is not working in advanced Drawing tool is not working in advanced...</a>
-                </div>
-              </div>
-              <div class="updates center-block">
-                <h4 class="text-center">Latest updates</h4>
-                <div class="list-group">
-                  <img class ="bubbles" src="images/bubble-user.png">
-                  <a href="#" class="list-group-item">
-                    <img src="images/updates-icon.png">
-                  </a>
-                  <img class ="bubbles" src="images/bubble-user.png">
-                  <a href="#" class="list-group-item">
-                    <img src="images/updates-icon.png">
-                  </a>
-                  <img class ="bubbles" src="images/bubble-user.png">
-                  <a href="#" class="list-group-item">
-                    <img src="images/updates-icon.png">
-                  </a>
-                </div>
-              </div>
-              <div class="tags">
-                <h4 class="text-center">Tags</h4>
-                <a class="btn btn-default" href="#" role="tag">Tag</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 1</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 2</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 3</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 4</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 5</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 6</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 7</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 8</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 9</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 10</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 11</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 12</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 13</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 14</a>
-                <a class="btn btn-default" href="#" role="tag">Tag 15</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
