--- a/login.html
+++ b/login.html
@@ -189,19 +189,19 @@
                 <p class="text-center">Or Login with</p>
                 <a class="btn" href="#" role="button">
                   <img src="images/icon-social-selfcad.jpg">
-                  <span class="selfcad-btn">SelfCAD</span>
+                  <span class="selfcad-btn hidden-xs">SelfCAD</span>
                 </a>
                 <a class="btn" href="#" role="button">
                   <img src="images/icon-social-facebook.jpg">
-                  <span class="facebook-btn">Facebook</span>
+                  <span class="facebook-btn hidden-xs">Facebook</span>
                 </a>
                 <a class="btn" href="#" role="button">
                   <img src="images/icon-social-twitter.jpg">
-                  <span class="twitter-btn">Twitter</span>
+                  <span class="twitter-btn hidden-xs">Twitter</span>
                 </a>
                 <a class="btn margin-r-reset" href="#" role="button">
                   <img src="images/icon-social-linkedin.jpg">
-                  <span class="linkedin-btn">LinkedIn</span>
+                  <span class="linkedin-btn hidden-xs">LinkedIn</span>
                 </a>
               </div>
             </div>
