fixed table on all-topics page and deleted box shadow and hover effect for input

--- a/all-users.html
+++ b/all-users.html
@@ -379,11 +379,11 @@
         </div><!-- content-list -->
       </section>
 
-      <div class="footer soft-ends-20 hidden-xs">
+            <div class="footer soft-ends-20 hidden-xs">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
-              <h4 class="text-center">Latest updates</h4>
+              <a href="#"><h4 class="text-center">Latest updates</h4></a>
               <p>Natalia</p>
               <span>How do you say Envato in Chinese? Here's how we worked it out. enva.to/4TfPo pic.twitter.com/jzIY9XyS04 </span>
               <br>
@@ -408,15 +408,7 @@
               </ul>
             </div>
             <div class="col-md-4">
-              <h4 class="text-center">Popular topics</h4>
-              <p>What is the Meta Post</p>
-              <span>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
-              </span>
-              <br>
-              <br>
-              <span>June 4 , 2014</span>
-              <div class="divider"></div>
-              <h4 class="text-center">Popular topics</h4>
+              <a href="#"><h4 class="text-center">Popular topics</h4></a>
               <p>What is the Meta Post</p>
               <span>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
               </span>
@@ -434,6 +426,7 @@
       </div>
       <!-- END MOBILE FOOTER -->
     </div>
+
     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
