--- a/registration.html
+++ b/registration.html
@@ -345,7 +345,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-4">
-              <h4 class="text-center">Latest updates</h4>
+              <a href="#"><h4 class="text-center">Latest updates</h4></a>
               <p>Natalia</p>
               <span>How do you say Envato in Chinese? Here's how we worked it out. enva.to/4TfPo pic.twitter.com/jzIY9XyS04 </span>
               <br>
@@ -370,15 +370,7 @@
               </ul>
             </div>
             <div class="col-md-4">
-              <h4 class="text-center">Popular topics</h4>
-              <p>What is the Meta Post</p>
-              <span>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
-              </span>
-              <br>
-              <br>
-              <span>June 4 , 2014</span>
-              <div class="divider"></div>
-              <h4 class="text-center">Popular topics</h4>
+              <a href="#"><h4 class="text-center">Popular topics</h4></a>
               <p>What is the Meta Post</p>
               <span>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
               </span>
