worked with popovers on all-user page, tested in mobile

--- a/all-topics.html
+++ b/all-topics.html
@@ -572,7 +572,7 @@
         </div><!-- content-list -->
       </section>
 
-            <div class="footer soft-ends-20 hidden-xs">
+      <div class="footer soft-ends-20 hidden-xs">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -608,6 +608,13 @@
               <br>
               <br>
               <span>June 4 , 2014</span>
+              <div class="divider"></div>
+              <p>What is the Meta Post</p>
+              <span>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
+              </span>
+              <br>
+              <br>
+              <span>June 4 , 2014</span>
             </div>
           </div>
           <p class="copyright text-right push-ends-40"> &copy; 2015 selfcad.com  |  All rights reserved </p>
@@ -618,7 +625,7 @@
           <p class="copyright text-center push-reset"> &copy; 2015 selfcad.com  |  All rights reserved </p>
       </div>
       <!-- END MOBILE FOOTER -->
-    </div>
+    </div>ND MOBILE FOOTER -->
 
     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
