--- a/index.html
+++ b/index.html
@@ -550,6 +550,13 @@
               <br>
               <br>
               <span>June 4 , 2014</span>
+              <div class="divider"></div>
+              <p>What is the Meta Post</p>
+              <span>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
+              </span>
+              <br>
+              <br>
+              <span>June 4 , 2014</span>
             </div>
           </div>
           <p class="copyright text-right push-ends-40"> &copy; 2015 selfcad.com  |  All rights reserved </p>
