--- a/login.html
+++ b/login.html
@@ -209,7 +209,7 @@
         </div><!-- content-list -->
       </section>
 
-            <div class="footer soft-ends-20 hidden-xs">
+      <div class="footer soft-ends-20 hidden-xs">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -239,6 +239,13 @@
             </div>
             <div class="col-md-4">
               <a href="#"><h4 class="text-center">Popular topics</h4></a>
+              <p>What is the Meta Post</p>
+              <span>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
+              </span>
+              <br>
+              <br>
+              <span>June 4 , 2014</span>
+              <div class="divider"></div>
               <p>What is the Meta Post</p>
               <span>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
               </span>
