created gallery page desktop

--- a/confirm-registration.html
+++ b/confirm-registration.html
@@ -131,7 +131,7 @@
           <div class="content-menu">
             <div class="row">
               <div class="col-md-4 col-sm-4">
-                <a href="#" class="text-center">
+                <a href="gallery.html" class="text-center">
                   <div class="content-menu-item-wrap gallery-item">
                     Gallery
                     <br>
