--- a/gallery.html
+++ b/gallery.html
@@ -151,7 +151,7 @@
                 </a>
               </div>
               <div class="col-md-4 col-sm-4">
-                <a href="#" class="text-center">
+                <a href="faq.html" class="text-center">
                   <div class="content-menu-item-wrap faq-item">
                     FAQ
                     <br>
@@ -183,7 +183,7 @@
                   <form class="form-inline">
                     <div class="form-group">
                       <img src="images/search-icon-gallery.png">
-                      <input type="text" class="form-control" placeholder="Search tags">
+                      <input type="text" id="category-search" class="form-control" placeholder="Search tags">
                     </div>
                   </form>
                 </div>
