--- a/all-topics.html
+++ b/all-topics.html
@@ -151,7 +151,7 @@
                 </a>
               </div>
               <div class="col-md-4 col-sm-4">
-                <a href="#" class="text-center">
+                <a href="faq.html" class="text-center">
                   <div class="content-menu-item-wrap faq-item">
                     FAQ
                     <br>
