added faq inner pages

--- a/faq-select-category.html
+++ b/faq-select-category.html
@@ -192,141 +192,91 @@
               </div>
               <div class="divider push-ends-20"></div>
             </div>
+            <h4 class="text-left push-top-20">Content</h4>
             <div class="row">
-              <div class="col-md-4 col-sm-4">
-                <h4 class="text-center">Most popular questions</h4>
-                <div class="media-mobile-wrap">
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                </div>
+              <div class="col-md-6 col-sm-6 col-xs-12">
+                <a href="faq-select-category-single.html" class="media">
+                  <div class="media-left">
+                    <img class="media-object" src="images/icon-question.png" alt="">
+                  </div>
+                  <div class="media-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore?</p>
+                  </div>
+                </a>
+                <a href="faq-select-category-single.html" class="media">
+                  <div class="media-left">
+                    <img class="media-object" src="images/icon-question.png" alt="">
+                  </div>
+                  <div class="media-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore?</p>
+                  </div>
+                </a>
+                <a href="faq-select-category-single.html" class="media">
+                  <div class="media-left">
+                    <img class="media-object" src="images/icon-question.png" alt="">
+                  </div>
+                  <div class="media-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore?</p>
+                  </div>
+                </a>
+                <a href="faq-select-category-single.html" class="media">
+                  <div class="media-left">
+                    <img class="media-object" src="images/icon-question.png" alt="">
+                  </div>
+                  <div class="media-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore?</p>
+                  </div>
+                </a>
+                <a href="faq-select-category-single.html" class="media">
+                  <div class="media-left">
+                    <img class="media-object" src="images/icon-question.png" alt="">
+                  </div>
+                  <div class="media-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore?</p>
+                  </div>
+                </a>
               </div>
-              <div class="col-md-4 col-sm-4">
-                <h4 class="text-center">Content</h4>
-                <div class="media-mobile-wrap">
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-4">
-                <h4 class="text-center">3D Pprinting</h4>
-                <div class="media-mobile-wrap">
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                </div>
+              <div class="col-md-6 col-sm-6 col-xs-12">
+                <a href="faq-select-category-single.html" class="media">
+                  <div class="media-left">
+                    <img class="media-object" src="images/icon-question.png" alt="">
+                  </div>
+                  <div class="media-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore?</p>
+                  </div>
+                </a>
+                <a href="faq-select-category-single.html" class="media">
+                  <div class="media-left">
+                    <img class="media-object" src="images/icon-question.png" alt="">
+                  </div>
+                  <div class="media-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore?</p>
+                  </div>
+                </a>
+                <a href="faq-select-category-single.html" class="media">
+                  <div class="media-left">
+                    <img class="media-object" src="images/icon-question.png" alt="">
+                  </div>
+                  <div class="media-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore?</p>
+                  </div>
+                </a>
+                <a href="faq-select-category-single.html" class="media">
+                  <div class="media-left">
+                    <img class="media-object" src="images/icon-question.png" alt="">
+                  </div>
+                  <div class="media-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore?</p>
+                  </div>
+                </a>
+                <a href="faq-select-category-single.html" class="media">
+                  <div class="media-left">
+                    <img class="media-object" src="images/icon-question.png" alt="">
+                  </div>
+                  <div class="media-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore?</p>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
