--- a/faq-select-category-single.html
+++ b/faq-select-category-single.html
@@ -193,139 +193,24 @@
               <div class="divider push-ends-20"></div>
             </div>
             <div class="row">
-              <div class="col-md-4 col-sm-4">
-                <h4 class="text-center">Most popular questions</h4>
-                <div class="media-mobile-wrap">
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-4">
-                <h4 class="text-center">Content</h4>
-                <div class="media-mobile-wrap">
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-4">
-                <h4 class="text-center">3D Pprinting</h4>
-                <div class="media-mobile-wrap">
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
-                  <a href="faq-select-category.html" class="media">
-                    <div class="media-left">
-                      <img class="media-object" src="images/icon-forum-topic.png" alt="">
-                    </div>
-                    <div class="media-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed </p>
-                    </div>
-                  </a>
+              <div class="col-md-12">
+                <div class="media">
+                  <div class="media-left">
+                    <img class="media-object" src="images/icon-question-big.png" alt="">
+                  </div>
+                  <div class="media-body">
+                    <h3 class="push-top-reset"><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore?</strong></h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et 
+                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
+                    ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat 
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit 
+                    anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque 
+                    laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae 
+                    dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia 
+                    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui 
+                    dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora 
+                    incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                  </div>
                 </div>
               </div>
             </div>
